--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,7 +4,7 @@
 target 'PaxSky' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
-
+  rn_maps_path = '../node_modules/react-native-maps'
   # Pods for PaxSky
 
   # Your 'node_modules' directory is probably in the root of your project,
@@ -18,6 +18,11 @@ target 'PaxSky' do
     'RCTWebSocket', # Needed for debugging
     'RCTAnimation', # Needed for FlatList and animations running on native UI thread
     # Add any other subspecs you want to use in your project
+    'RCTGeolocation',
+    'RCTImage',
+    'RCTLinkingIOS',
+    'RCTSettings',
+    'RCTVibration',
   ]
   # Explicitly include Yoga if you are using RN >= 0.42.0
   pod 'yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
@@ -26,6 +31,11 @@ target 'PaxSky' do
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
-
+  # react-navigation dependencies
   pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+  # react-native-maps dependencies
+  pod 'react-native-maps', path: rn_maps_path
+  # pod 'react-native-google-maps', path: rn_maps_path  # Unomment this line if you want to support GoogleMaps on iOS
+  # pod 'GoogleMaps'  # Uncomment this line if you want to support GoogleMaps on iOS
+  # pod 'Google-Maps-iOS-Utils' # Uncomment this line if you want to support GoogleMaps on iOS
 end
