--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-facebook-account-kit')
     implementation project(':react-native-maps')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
