--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-
+    <!-- facebook account kit READ SMS -->
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -14,6 +16,17 @@
       <meta-data
         android:name="com.google.android.geo.API_KEY"
         android:value="AIzaSyAEW29FWyfSPSur-RyDKWFUVecshAsp_c8"/>
+      <!-- facebook account kit -->
+      <meta-data
+          android:name="com.facebook.sdk.ApplicationId"
+          android:value="@string/fb_app_id" />
+      <meta-data
+          android:name="com.facebook.accountkit.ApplicationName"
+          android:value="@string/app_name" />
+      <meta-data
+          android:name="com.facebook.accountkit.ClientToken"
+          android:value="@string/ak_client_token" />
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
