--- a/ios/Podfile
+++ b/ios/Podfile
@@ -41,4 +41,6 @@ target 'PaxSky' do
 
   # react-facebook-account-kit dependencies
   pod 'RNAccountKit', :path => '../node_modules/react-native-facebook-account-kit/ios'
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
 end
