--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,13 +137,16 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-splash-screen')
+    implementation project(':react-native-fcm')
+    implementation project(':react-native-splash-screen')
     implementation project(':react-native-facebook-account-kit')
     implementation project(':react-native-maps')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.google.firebase:firebase-core'
+    implementation 'com.google.firebase:firebase-messaging'
 }
 
 // Run this once to be able to run the application with BUCK
@@ -152,3 +155,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'
