--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -142,7 +142,6 @@ dependencies {
     implementation(project(':react-native-facebook-account-kit')){
         exclude group: 'com.facebook.android', module: 'account-kit-sdk'
     }
-    implementation 'com.facebook.android:account-kit-sdk:4.23.0'
     implementation project(':react-native-maps')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -150,7 +149,13 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'com.google.firebase:firebase-core'
     implementation 'com.google.firebase:firebase-messaging'
-    
+
+    implementation ('com.facebook.android:account-kit-sdk:4.39.0') {
+        exclude group: 'com.google.android.gms', module: 'play-services-auth-api-phone'
+        exclude group: 'com.google.android.gms', module: 'play-services-auth'
+    }
+    implementation 'com.google.android.gms:play-services-auth-api-phone:16.0.0'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
 }
 
 // Run this once to be able to run the application with BUCK
