--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-i18n')
     implementation project(':react-native-fcm')
     implementation project(':react-native-splash-screen')
     implementation(project(':react-native-facebook-account-kit')){
