[Offices] added office list, config release iOS

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -51,3 +51,11 @@ target 'PaxSky' do
   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
 
 end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    if target.name == "React"
+      target.remove_from_project
+    end
+  end
+end
