--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-datepicker": "^1.7.2",
     "react-native-facebook-account-kit": "^1.0.1",
     "react-native-fcm": "^16.2.4",
     "react-native-gesture-handler": "^1.0.12",
