--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    implementation project(':react-native-fbsdk')
     implementation project(':react-native-linear-gradient')
     implementation project(':react-native-i18n')
     implementation project(':react-native-fcm')
