--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-fbsdk": "^0.8.0",
     "react-native-fcm": "^16.2.4",
     "react-native-gesture-handler": "^1.0.12",
+    "react-native-global-props": "^1.1.5",
     "react-native-i18n": "^2.0.15",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-maps": "^0.22.1",
@@ -40,6 +41,11 @@
   },
   "resolutions": {
     "react-devtools-core": "3.4.3"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
   },
   "jest": {
     "preset": "react-native"
