--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-i18n": "^2.0.15",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-maps": "^0.22.1",
+    "react-native-material-textfield": "^0.12.0",
     "react-native-splash-screen": "^3.1.1",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
