--- a/ios/Podfile
+++ b/ios/Podfile
@@ -59,6 +59,8 @@ target 'PaxSky' do
   pod 'react-native-fast-image', :path => '../node_modules/react-native-fast-image'
   # react native picker
   pod 'Picker', :path => '../node_modules/react-native-picker'
+  # react native deivce infor
+  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
 
 end
 
