--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-material-textfield": "^0.12.0",
     "react-native-picker": "^4.3.7",
     "react-native-splash-screen": "^3.1.1",
+    "react-native-star-rating": "^1.1.0",
     "react-native-swipeout": "^2.3.6",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
