--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,7 +149,7 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-image-picker')
+    implementation project(':react-native-image-picker')
     implementation project(':react-native-device-info')
     implementation project(':react-native-picker')
     implementation project(':react-native-fast-image')
