--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-splash-screen": "^3.1.1",
     "react-native-star-rating": "^1.1.0",
     "react-native-swipeout": "^2.3.6",
+    "react-native-swiper": "^1.5.14",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
