--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-fcm": "^16.2.4",
     "react-native-gesture-handler": "^1.0.12",
     "react-native-global-props": "^1.1.5",
+    "react-native-htmlview": "^0.13.0",
     "react-native-i18n": "^2.0.15",
     "react-native-image-picker": "^0.28.0",
     "react-native-linear-gradient": "^2.5.3",
