--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-htmlview": "^0.13.0",
     "react-native-i18n": "^2.0.15",
     "react-native-image-picker": "^0.28.0",
+    "react-native-image-zoom-viewer": "^2.2.25",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-maps": "^0.22.1",
     "react-native-material-textfield": "^0.12.0",
