- Fix bug icon notification, buildings, offices

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
           </intent-filter>
       </receiver>
       <!-- react native fcm -->
-      <meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:resource="@mipmap/ic_launcher"/>
+      <meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:resource="@mipmap/ic_trans"/>
       <meta-data android:name="com.google.firebase.messaging.default_notification_color" android:resource="@color/blue"/>
       <meta-data android:name="com.google.firebase.messaging.default_notification_channel_id" android:value="paxsky_chanel"/>
 
