--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-photo-view')
     compile project(':react-native-vector-icons')
     implementation project(':react-native-image-picker')
     implementation project(':react-native-device-info')
