--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.mylife_app">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -16,6 +17,7 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:allowBackup="false"
+      tools:replace="android:allowBackup"
       android:fullBackupContent="@xml/backup_config"
       android:theme="@style/AppTheme">
       <!-- local push -->
