--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-linear-gradient": "^2.5.3",
     "react-native-maps": "^0.22.1",
     "react-native-material-textfield": "^0.12.0",
+    "react-native-photo-view": "1.5.2",
     "react-native-picker": "^4.3.7",
     "react-native-splash-screen": "^3.1.1",
     "react-native-star-rating": "^1.1.0",
