Update Key ID, splash screen

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
       <!-- react native fcm -->
       <meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:resource="@mipmap/ic_trans"/>
       <meta-data android:name="com.google.firebase.messaging.default_notification_color" android:resource="@color/blue"/>
-      <meta-data android:name="com.google.firebase.messaging.default_notification_channel_id" android:value="paxsky_chanel"/>
+      <meta-data android:name="com.google.firebase.messaging.default_notification_channel_id" android:value="mylife_company_chanel"/>
 
       <service android:name="com.evollu.react.fcm.MessagingService" android:enabled="true" android:exported="true">
         <intent-filter>
@@ -49,7 +49,7 @@
       <!-- react native maps -->
       <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyB9n_AEwhCgspLXbH73IE-L9XU4iBrOKL8"/>
+        android:value="AIzaSyDb2BESrwni_aReqUTs11pCIELLt3Echkk"/>
       <!-- facebook account kit -->
       <meta-data
           android:name="com.facebook.sdk.ApplicationId"
