--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "android": "react-native run-android"
   },
   "dependencies": {
-    "@ptomasroos/react-native-multi-slider": "^1.0.0",
-    "add": "^2.0.6",
     "axios": "^0.18.0",
     "lodash": "^4.17.11",
     "moment": "^2.23.0",
@@ -50,8 +48,7 @@
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0",
-    "yarn": "^1.15.2"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
